# carma-public

./: .gitignore  stack.yaml
.circleci/: config.yml
carma-casepartner-fe/: README.md  elm.json  package.json
carma-casepartner-fe/book/: mkdocs.yml
carma-casepartner-fe/public/: index.html  leafletmapelement.css  leafletmapelement.js  map-client.html  styles.css
carma-casepartner-fe/review/: elm.json
carma-casepartner-fe/src/: Api.elm  Chat.elm  Components.elm  Const.elm  Global.elm  Layout.elm  Main.elm  Page.elm  Ports.elm  Types.elm  Ui.elm  Utils.elm
carma-casepartner-us/: API.md  carma-casepartner-us.cabal  devel.cfg  package.yaml  stack.yaml
carma-casepartner-us/conf/: 40-carma-casepartner-us.conf  carma-casepartner-us.service
carma-casepartner-us/snaplets/postgresql-simple/: devel.cfg
carma-casepartner-us/src/: Application.hs  CarmaApi.hs  Main.hs  PgNotify.hs  Site.hs  Types.hs  Util.hs
carma-casepartner-us/src/AppHandlers/: CaseDescription.hs  CaseInfo.hs  Dicts.hs  MobileAPI.hs  Service.hs  Services.hs  Users.hs  Util.hs
carma-casepartner-us/src/AppHandlers/Settings/: Drivers.hs
carma-casepartner-us/src/Service/: Util.hs
carma-casepartner-us/src/Snaplet/Search/: Types.hs
carma-mobile-server/src/: Application.hs
carma-proxies/: package.yaml  proxies.cfg
carma-proxies/app/: Main.hs
carma-utils/: package.yaml
caroperator-svc/: Main.hs  caroperator-svc.cabal  caroperator-svc.conf  caroperator-svc.conf.example
caroperator-svc/conf/: carma-caroperator-svc.service  syslog.conf
customer-feedback-svc/: .gitignore  README.md  example.conf  package.json  package.yaml  tsconfig.json
customer-feedback-svc/hs/: Main.hs
customer-feedback-svc/src/: index.html  index.tsx
database/patches/: 1.350.0-CasePartner.sh  1.350.1-CasePartner-role.sql  1.350.2-allservicesview-access.sql  1.350.3-TypeOfserviceSynonym.sh  1.352.0-btree-index-on-contract-fts_key.sh  1.355.0-customer-feedback.sh  1.356.0-autoteka-tables.sh  1.356.1-autoteka-permissions.sql  1.357.1-CasePartner-role.sql  1.357.2-driverServiceQueue.sql  1.357.3-TypeOfserviceSynonym.sh  1.358.0-partner-case-close.sql  1.358.1-add-payment-bill-fields.sql  1.359.0-drivers-photos.sql  1.359.1-android-notify.sql  1.360.0-new-partner-fields.sql  1.360.1-partner-field-code1c.sql  1.361.0-customer-feedback.sh  1.361.0-towage-new-fields.sh  1.361.0-where-is-driver.sql  1.361.1-where-is-driver.sh  1.362.0-casehistory-delayreasoncomment.sh  1.362.0-service-partnerIsDone.sql
docs/: Adding fields to models.md
location-sharing-svc/: package-lock.json
srv/: package-lock.json  package.json  package.yaml  run2.sh  tsconfig.json  webpack.config.coffee
srv/src/: Application.hs  (+4 more)
tools/: builder.sh
(+105 files in other folders)
