Name:                carma-casepartner-us
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable carma-casepartner-us
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Site,
    Application,
    Util,
    Snaplet.Auth.Class,
    AppHandlers.Util
    

  default-extensions: FlexibleContexts FlexibleInstances LambdaCase MultiParamTypeClasses NamedFieldPuns OverloadedStrings QuasiQuotes RecordWildCards TupleSections
  Build-depends:
    base                      >= 4.4     && < 5,
    bytestring                >= 0.9.1   && < 0.11,
    heist                     >= 1.0     && < 1.2,
    lens                      >= 3.7.6   && < 4.18,
    map-syntax                >= 0.2     && < 0.4,
    monad-control             >= 1.0     && < 1.1,
    mtl                       >= 2       && < 2.3,
    snaplet-postgresql-simple         ,
    snap                      >= 1.0     && < 1.2,
    snap-core                 >= 1.0     && < 1.1,
    snap-server               >= 1.0     && < 1.2,
    snap-loader-static        >= 1.0     && < 1.1,
    text                      >= 0.11    && < 1.3,
    time                      >= 1.1     && < 1.9,
    xmlhtml                   >= 0.1     && < 0.3,
    containers,
    postgresql-simple,
    aeson,
    basic-prelude,
    hsyslog,
    attoparsec,
    lifted-base,
    vector,
    pg-simple-qq-alt
--    carma-models
    


  if flag(development)
    build-depends:
      snap-loader-dynamic >= 1.0 && < 1.1
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
